WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155510
Silence leaks in ParkingLot
https://bugs.webkit.org/show_bug.cgi?id=155510
Summary
Silence leaks in ParkingLot
Filip Pizlo
Reported
2016-03-15 14:02:12 PDT
Patch forthcoming.
Attachments
the patch
(6.85 KB, patch)
2016-03-15 14:07 PDT
,
Filip Pizlo
ap
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-03-15 14:07:49 PDT
Created
attachment 274125
[details]
the patch
Alexey Proskuryakov
Comment 2
2016-03-15 14:13:06 PDT
Comment on
attachment 274125
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274125&action=review
> Source/WTF/wtf/ParkingLot.cpp:183 > +Vector<Hashtable*>* hashtables;
Should this be static?
Filip Pizlo
Comment 3
2016-03-15 14:13:44 PDT
(In reply to
comment #2
)
> Comment on
attachment 274125
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=274125&action=review
> > > Source/WTF/wtf/ParkingLot.cpp:183 > > +Vector<Hashtable*>* hashtables; > > Should this be static?
The whole thing is in an anonymous namespace, so it doesn't have to be.
Alexey Proskuryakov
Comment 4
2016-03-15 14:31:36 PDT
Indeed. See also: <
https://lists.macosforge.org/pipermail/webkit-dev/2011-October/018303.html
>.
Filip Pizlo
Comment 5
2016-03-17 11:54:46 PDT
Landed in
http://trac.webkit.org/changeset/198345
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug