Source/WTF/wtf/WordLock.cpp
@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2015 Apple Inc. All rights reserved.
+ * Copyright (C) 2015-2016 Apple Inc. All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -77,7 +77,7 @@ ThreadData* myThreadData()
 
 } // anonymous namespace
 
-NEVER_INLINE void WordLock::lockSlow()
+NEVER_INLINE void WordLockBase::lockSlow()
 {
     unsigned spinCount = 0;
 
@@ -178,7 +178,7 @@ NEVER_INLINE void WordLock::lockSlow()
     }
 }
 
-NEVER_INLINE void WordLock::unlockSlow()
+NEVER_INLINE void WordLockBase::unlockSlow()
 {
     // The fast path can fail either because of spurious weak CAS failure, or because someone put a
     // thread on the queue, or the queue lock is held. If the queue lock is held, it can only be
